@@ -56,8 +56,9 @@ struct gr_info_s
 	unsigned block_type;
 	unsigned mixed_block_flag;
 	unsigned table_select[3];
-	unsigned subblock_gain[3];
-	unsigned maxband[3];
+	/* Making those two signed int as workaround for open64/pathscale/sun compilers, and also for consistency, since they're worked on together with other signed variables. */
+	int maxband[3];
+	int maxbandl;
 	unsigned maxbandl;
 	unsigned maxb;
 	unsigned region1start;
